--- a/x86/x86.config
+++ b/x86/x86.config
@@ -4883,6 +4883,7 @@ CONFIG_PACKAGE_luci-app-adguardhome=y
 # CONFIG_PACKAGE_luci-app-advanced-reboot is not set
 # CONFIG_PACKAGE_luci-app-ahcp is not set
 # CONFIG_PACKAGE_luci-app-airplay2 is not set
+CONFIG_PACKAGE_luci-app-alist=y
 CONFIG_PACKAGE_luci-app-aliyundrive-fuse=y
 CONFIG_PACKAGE_luci-app-aliyundrive-webdav=y
 # CONFIG_PACKAGE_luci-app-amule is not set
@@ -5150,6 +5151,8 @@ CONFIG_PACKAGE_luci-lib-nixio_openssl=y
 CONFIG_PACKAGE_default-settings=y
 CONFIG_PACKAGE_luci-i18n-accesscontrol-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-adbyby-plus-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-alist-zh-cn=y
+# CONFIG_PACKAGE_luci-i18n-alist-zh_Hans is not set
 CONFIG_PACKAGE_luci-i18n-aliyundrive-fuse-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-aliyundrive-fuse-zh_Hans is not set
 CONFIG_PACKAGE_luci-i18n-aliyundrive-webdav-zh-cn=y
@@ -6296,6 +6299,9 @@ CONFIG_PACKAGE_zerotier=y
 #
 # Web Servers/Proxies
 #
+CONFIG_PACKAGE_alist=y
+# CONFIG_ALIST_COMPRESS_UPX is not set
+# CONFIG_ALIST_COMPRESS_GOPROXY is not set
 # CONFIG_PACKAGE_apache is not set
 CONFIG_PACKAGE_brook=y
 # CONFIG_PACKAGE_cgi-io is not set
