--- a/.github/workflows/Update synchronization checker.yml
+++ b/.github/workflows/Update synchronization checker.yml
@@ -30,12 +30,12 @@ jobs:
       run: |
         sudo timedatectl set-timezone "$TZ"
         pwd
-        rm -rf ./backup/kernel
-        mkdir -p ./backup/kernel
-        svn export https://github.com/ophub/kernel/trunk/pub/stable ./backup/kernel --force
-        #svn export https://github.com/breakings/OpenWrt/trunk/opt/kernel ./backup/kernel --force
-        rm -rf ./backup/kernel/5.10.*
-        rm -rf ./backup/kernel/5.4.*
+        rm -rf ./opt/kernel
+        mkdir -p ./opt/kernel
+        svn export https://github.com/ophub/kernel/trunk/pub/stable ./opt/kernel --force
+        #svn export https://github.com/breakings/OpenWrt/trunk/opt/kernel ./opt/kernel --force
+        rm -rf ./opt/kernel/5.10.*
+        rm -rf ./opt/kernel/5.4.*
 
     - name: Download kernel
       uses: robinraju/release-downloader@main
@@ -44,11 +44,11 @@ jobs:
         latest: true
         fileName: "*"
         tarBall: true
-        out-file-path: ./backup/kernel
+        out-file-path: ./opt/kernel
 
     - name: Release tar
       run: |
-        cd ./backup/kernel
+        cd ./opt/kernel
         find ./ -name *ophub*|xargs rm -rf
         find ./ -name *compile*|xargs rm -rf
         ls ./*.tar.gz |xargs -n1 tar xzvf
